<resources>
    <string name="app_name">Sistem Pakar</string>
    <string name="nilai_threshold">Nilai Threshold</string>
    <string name="sistem_pakar">Sistem Pakar</string>
    <string name="description">Indentifikasi Infeksi Sistem Gastro Usus</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="question_description">Silahkan Pilih Gejala Penyakit Yang Dialami (boleh lebih dari satu)</string>
    <string name="about">Application Created by Ahmad Faiz Kamaludin</string>
    <string name="kemungkinan_lainnya">Kemungkinan Lainnya :</string>
    <string name="test_ulang">Test Ulang</string>
    <string name="hasil_tes_anda">Hasil Tes Anda</string>
</resources>
