<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ui.result.ResultFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/hasil_tes_anda" />
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        tools:text="@tools:sample/lorem" />
    <TextView
        android:id="@+id/tv_threshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="@tools:sample/lorem" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:text="@string/kemungkinan_lainnya" />
    <TextView
        android:id="@+id/tv_result_others"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/lorem" />
    <Button
        android:id="@+id/btn_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/test_ulang"/>
</LinearLayout>